# cf-control

./: .clang-format-humble  .gitignore  README.md
.devcontainer/: Dockerfile  Dockerfile.nogpu  build.sh  compose.nogpu.yaml  compose.yaml  devcontainer.json
cf_control/: CMakeLists.txt  package.xml
cf_control/include/cf_control/: drone_dynamics.hpp  flatness.hpp  flatness_math.hpp  lee_controller.hpp  lee_math.hpp  mixer.hpp  odom_to_drone_state.hpp  round_trajectory.hpp
cf_control/src/: drone_dynamics.cpp  flatness.cpp  lee_controller.cpp  mixer.cpp  odom_to_drone_state.cpp  round_trajectory.cpp
cf_control_msgs/: CMakeLists.txt  LICENSE  package.xml
cf_control_msgs/msg/: DroneState.msg  FlatInput.msg  ThrustAndTorque.msg  TrajectorySetpoint.msg
ros_gz_crazyflie_bringup/: CMakeLists.txt  package.xml
ros_gz_crazyflie_bringup/config/: ros_gz_crazyflie_bridge.yaml
ros_gz_crazyflie_bringup/gazebo_files/gazebo/crazyflie/: model.sdf
ros_gz_crazyflie_bringup/launch/: crazyflie_simulation.launch.py
tests/: CMakeLists.txt  test_flatness.cpp
