<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cf_control</name>
  <version>0.0.1</version>
  <description>Control package for Crazyflie UAVs</description>
  <maintainer email="szolc@agh.edu.pl">Hubert Szolc</maintainer>
  <license>MIT</license>

  <depend>actuator_msgs</depend>
  <depend>cf_control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>